Добавлены репозиторий и сервис для работы с InventoryNumber